<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="2dp"
    android:background="@color/white"
    android:paddingBottom="10dp"
    android:paddingTop="15dp">

    <View
        android:layout_width="3dp"
        android:layout_height="11dp"
        android:layout_centerVertical="true"
        android:background="@color/recom_header_logo" />

    <TextView
        android:id="@+id/channelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginStart="13sp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/text_dark_black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/count"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/channelTitle"
        android:layout_marginStart="7dp"
        android:textColor="@color/text_dark_black"
        android:textSize="14sp"
        android:textStyle="bold"
        android:visibility="gone"
        tools:text="(180)" />

    <FrameLayout
        android:id="@+id/manageLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="13dp">


        <LinearLayout
            android:id="@+id/llEdit"
            android:layout_width="wrap_content"
            android:layout_height="15dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:visibility="gone">

            <TextView
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="13dp"
                android:layout_marginStart="13dp"
                android:text="@string/cancel"
                android:textSize="13dp" />

            <View
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:background="#C7D5DC" />

            <TextView
                android:id="@+id/selectAll"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="13dp"
                android:layout_marginStart="13dp"
                android:text="@string/video_cache_select_all"
                android:textSize="13dp" />

            <View
                android:id="@+id/div"
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:background="#C7D5DC" />

            <TextView
                android:id="@+id/delete"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="13dp"
                android:layout_marginStart="13dp"
                android:text="@string/delete"
                android:textSize="13dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_edit" />

    </FrameLayout>
</RelativeLayout>
