<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <!-- 顶部标题 -->
    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <ImageView
            android:id="@+id/left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="13dp"
            android:src="@drawable/icon_back" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="13dp"
            android:layout_toEndOf="@+id/left"
            android:gravity="center"
            android:text="@string/profile_edit"
            android:textColor="@color/text_dark_black"
            android:textSize="17dp" />

        <com.mivideo.mifm.ui.widget.MiniPlayerView
            android:id="@+id/miniPlayer"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:src="@drawable/icon_playing1" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/avater"
        android:layout_width="match_parent"
        android:layout_height="66dp"
        android:background="@drawable/my_item_background"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="33dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="start|center_vertical"
            android:text="@string/profile_avater"
            android:textColor="@color/text_dark_black"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/ivAvater"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:layout_toStartOf="@+id/avater_arrow"
            android:src="@drawable/my_avatar" />

        <ImageView
            android:id="@+id/avater_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_arrow_recom_more" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lineColor" />

    <RelativeLayout
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/my_item_background"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="33dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="start|center_vertical"
            android:text="@string/profile_name"
            android:textColor="@color/text_dark_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:layout_toStartOf="@+id/name_arrow"
            android:gravity="end|center_vertical"
            android:textColor="@color/palette_black_30"
            android:textSize="16sp"
            tools:text="@string/profile_name" />

        <ImageView
            android:id="@+id/name_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_arrow_recom_more" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lineColor" />

    <RelativeLayout
        android:id="@+id/gender"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/my_item_background"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="33dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="start|center_vertical"
            android:text="@string/profile_sex"
            android:textColor="@color/text_dark_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvGender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:layout_toStartOf="@+id/sex_arrow"
            android:gravity="end|center_vertical"
            android:textColor="@color/palette_black_30"
            android:textSize="16sp"
            tools:text="@string/profile_name" />

        <ImageView
            android:id="@+id/sex_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_arrow_recom_more" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lineColor" />

    <RelativeLayout
        android:id="@+id/birth"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/my_item_background"
        android:orientation="horizontal"
        android:paddingEnd="20dp"
        android:paddingStart="33dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="start|center_vertical"
            android:text="@string/profile_birth"
            android:textColor="@color/text_dark_black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tvBirth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="13dp"
            android:layout_toStartOf="@+id/birth_arrow"
            android:gravity="end|center_vertical"
            android:textColor="@color/palette_black_30"
            android:textSize="16sp"
            tools:text="@string/profile_birth" />

        <ImageView
            android:id="@+id/birth_arrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_arrow_recom_more" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/lineColor" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/sendSuggestButton"
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:layout_gravity="bottom"
            android:background="#FF6532F4"
            android:gravity="center"
            android:text="@string/suggest_fragment_button"
            android:textColor="@android:color/white"
            android:textSize="17sp" />
    </FrameLayout>
</LinearLayout>